Container overflow fix

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,6 +2,10 @@
  * Additional Show Page Clases
  * ------------------------------------- */
 
+.container {
+  max-width: 100%;
+}
+
 // Core Dashboard Classes
 .dashboard-box {
   margin-top: 200px;
